--- a/CustomerAndAdmin.html
+++ b/CustomerAndAdmin.html
@@ -27,13 +27,13 @@
           <li>Food & Drink</li>
           <li>Kids</li>
           <li class="active">Apparel</li>
-          <li><a href="index.html">Back To Dashboard</a></li>
+          <li>Login</li>
         </ul>
       </aside>
       <main>
         <h1>Apparel</h1>
         <div class="container2">
-          <div style="display: none">
+          <div>
             <h2 id="jumlahBarang">Total Item : 0</h2>
             <h2 id="totalHarga">Total Price : Rp.0</h2>
             <input id="checkoutButton" type="button" value="Checkout" />
@@ -63,6 +63,6 @@
       </main>
     </div>
 
-    <script src="admin.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
