--- a/customer.html
+++ b/customer.html
@@ -1,44 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="customer-style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="customer-style.css" />
     <title>Customer Page</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <aside>
-            <div class="profile-container">
-                <img src="profile.png" alt="profile" width="30%">
-                <div>
-                    <h3>Uzumaki Bayu</h3>
-                    <h4>Customer</h4>
-                </div>
-            </div>
-            <ul>
-                <li>Handphone & Tablet</li>
-                <li>Food & Drink</li>
-                <li>Kids</li>
-                <li class="active">Apparel</li>
-                <li>Login</li>
-            </ul>
-        </aside>
-        <main>
-            <h1>Apparel</h1>
-            <div id="cards" class="cards">
-            </div>
-            <div>
-                <h2 id="jumlahBarang">Total Item : 0</h2>
-                <h2 id="totalHarga">Total Price : Rp.0</h2>
-                <input id="checkoutButton" type="button" value="Checkout">
-            </div>
-        </main>
+      <aside>
+        <div class="profile-container">
+          <img src="profile.png" alt="profile" width="30%" />
+          <div>
+            <h3>Uzumaki Bayu</h3>
+            <h4>Customer</h4>
+          </div>
+        </div>
+        <ul>
+          <li>Handphone & Tablet</li>
+          <li>Food & Drink</li>
+          <li>Kids</li>
+          <li class="active">Apparel</li>
+          <li><a href="index.html">Back To Dashboard</a></li>
+        </ul>
+      </aside>
+      <main>
+        <h1>Apparel</h1>
+        <div id="cards" class="cards"></div>
+        <div>
+          <h2 id="jumlahBarang">Total Item : 0</h2>
+          <h2 id="totalHarga">Total Price : Rp.0</h2>
+          <input id="checkoutButton" type="button" value="Checkout" />
+        </div>
+      </main>
     </div>
 
     <script src="customer-script.js"></script>
-</body>
+  </body>
 </html>
