--- a/index.html
+++ b/index.html
@@ -1,12 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-  </head>
-  <body>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background-image: url('ecomer.jpg');
+            background-size: cover;
+            background-position: center;
+            height: 100vh; /* agar gambar latar belakang mencakup seluruh layar */
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        
+        a {
+            display: inline-block;
+            margin: 100px;
+            padding: 20px 80px;
+            text-decoration: none;
+            color: #fff;
+            background-color: #007bff;
+            border-radius: 30px;
+        }
+        
+        a:hover {
+            background-color: #0056b3;
+        }
+    </style>
+</head>
+<body>
     <a href="customer.html">Masuk sebagai Customer</a>
     <a href="admin.html">Masuk sebagai Admin</a>
-  </body>
+</body>
 </html>
