add name store in index

--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
             background-color: #007bff;
             border-radius: 30px;
         }
+
+        h1 {
+            font-size: 30px;
+        }   
         
         a:hover {
             background-color: #0056b3;
@@ -35,6 +39,7 @@
     </style>
 </head>
 <body>
+    <h1 style="position: absolute; top: 0; left: 50px; color: black; font-size: 50px">HACKSHOP</h1>
     <a href="customer.html">Masuk sebagai Customer</a>
     <a href="admin.html">Masuk sebagai Admin</a>
 </body>
