update logo url

--- a/admin.html
+++ b/admin.html
@@ -10,9 +10,10 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Hackathon B</title>
+    <title>HACKSHOP ADMIN</title>
   </head>
   <body>
+    <h1 style="position: absolute; top: 0; right: 50px; color: black; font-size: 30px;">HACKSHOP</h1>
     <div class="container">
       <aside>
         <div class="profile-container">
