update customer page

--- a/customer.html
+++ b/customer.html
@@ -24,15 +24,15 @@
           </div>
         </div>
         <ul>
-          <li>Handphone & Tablet</li>
-          <li>Food & Drink</li>
-          <li>Kids</li>
-          <li class="active">Apparel</li>
+          <li>Hat</li>
+          <li>Shirt</li>
+          <li>Pants</li>
+          <li class="active">Footwear</li>
           <li><a href="index.html">Back To Dashboard</a></li>
         </ul>
       </aside>
       <main>
-        <h1>Apparel</h1>
+        <h1>Footwear</h1>
         <div id="cards" class="cards"></div>
         <div>
           <h2 id="jumlahBarang">Total Item : 0</h2>
