--- a/admin.html
+++ b/admin.html
@@ -24,10 +24,10 @@
           </div>
         </div>
         <ul>
-          <li>Handphone & Tablet</li>
-          <li>Food & Drink</li>
-          <li>Kids</li>
-          <li class="active">Apparel</li>
+          <li>Hat</li>
+          <li>Shirt</li>
+          <li>Pants</li>
+          <li class="active">Footwear</li>
           <li><a href="index.html">Back To Dashboard</a></li>
         </ul>
       </aside>
