--- a/admin.html
+++ b/admin.html
@@ -32,7 +32,7 @@
         </ul>
       </aside>
       <main>
-        <h1>Apparel</h1>
+        <h1>Footwear</h1>
         <div class="container2">
           <div style="display: none">
             <h2 id="jumlahBarang">Total Item : 0</h2>
